syntax = "proto3";

import "mlagents/envs/communicator_objects/resolution_proto.proto";
import "mlagents/envs/communicator_objects/space_type_proto.proto";

option csharp_namespace = "MLAgents.CommunicatorObjects";
package communicator_objects;

message BrainParametersProto {
    int32 vector_observation_size = 1;
    int32 num_stacked_vector_observations = 2;
    repeated int32 vector_action_size = 3;
    repeated ResolutionProto camera_resolutions = 4;
    repeated string vector_action_descriptions = 5;
    SpaceTypeProto vector_action_space_type = 6;
    string brain_name = 7;
    bool is_training = 8;
}
